--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ final_secret.py
 spotify.sqlite
 Final Project Proposal - Chieh-Hao Chuang.docx
 Final_Project_Overview.pdf
+Final Project Checkpoint - Chieh-Hao Chuang.docx
