--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ spotify.sqlite
 Final Project Proposal - Chieh-Hao Chuang.docx
 Final_Project_Overview.pdf
 Final Project Checkpoint - Chieh-Hao Chuang.docx
+Final_Project_Submission_Guidelines.pdf
+Final Project - Chieh-Hao Chuang.docx
+Final Project - Chieh-Hao Chuang.pdf
+Final Project Demo - Chieh-Hao Chuang.mp4
